force-app/main/default/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Class_Next_Year__c</fullName>
        <description>Defaults:
From Lead Convert: Will be &apos;Pending&apos; for schools without campus options and any of the 3 &apos;Pending&apos; options for schools with campus options (&apos;Not Sure&apos; = &apos;Pending&apos;). Get&apos;s the same value as the &apos;Class&apos; field in the logic.
From Student Clone: Will be copied from the record that is cloned regardless of whether it&apos;s blank or otherwise.</description>
        <inlineHelpText>A to H = Campus 1 (Krylatskoe/CF) 
I to P = Campus 2 (Rosinka/ CJ)</inlineHelpText>
        <label>Class Next Year</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>School_Controlling_Picklist2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending (Campus 1: A-H)</fullName>
                </value>
                <value>
                    <fullName>Pending (Campus 2: I-P)</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>[House] 1</fullName>
                </value>
                <value>
                    <fullName>[House] 2</fullName>
                </value>
                <value>
                    <fullName>[House] 3</fullName>
                </value>
                <value>
                    <fullName>[House] 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Register_Remark__c</fullName>
        <formula>IF(AND( TEXT(StageName) =&quot;Enrolled&quot;,  CloseDate  &gt;Today() ),&quot;Starting: &quot;&amp;  Copy_Starting_Date_Format__c,

IF(AND( TEXT( Add_to_Register__c ) =&quot;Yes&quot;, CloseDate&lt;=Today()),&quot;Awaiting Student Deposit &quot;, IF(AND( TEXT( Add_to_Register__c ) =&quot;Yes&quot;, CloseDate&gt;Today() ),&quot;Awaiting Student Deposit. Starting: &quot;&amp;Copy_Starting_Date_Format__c, 


&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Register Remark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_T_Yr__c</fullName>
        <formula>IF(    
   OR(
      LEN(Class_Copy__c)=1,
      CONTAINS(Class_Copy__c, &quot;Pending&quot;)
      ),
   Class_Copy__c,
   &quot; &quot;&amp; House_Copy__c &amp; RIGHT(Class_Copy__c, 2)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class (T.Yr)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Defaults:
From Lead Convert: Will be &apos;Pending&apos; for schools without campus options and any of the 3 &apos;Pending&apos; options for schools with campus options (&apos;Not Sure&apos; = &apos;Pending&apos;)
From Student Clone: Will be copied from the record that is cloned as it cannot be blank and can therefore not revert to the default of &apos;Pending&apos;.</description>
        <inlineHelpText>A to H = Campus 1 (Krylatskoe/CF)
I to P = Campus 2 (Rosinka/ CJ)</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>School_Controlling_Picklist1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Pending (Campus 1: A-H)</fullName>
                </value>
                <value>
                    <fullName>Pending (Campus 2: I-P)</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>[House] 1</fullName>
                </value>
                <value>
                    <fullName>[House] 2</fullName>
                </value>
                <value>
                    <fullName>[House] 3</fullName>
                </value>
                <value>
                    <fullName>[House] 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clubes__c</fullName>
        <label>Clubs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Football</fullName>
                </value>
                <value>
                    <fullName>Basketball</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Combined_Invoicing_Notes__c</fullName>
        <formula>IF(AND(Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c &lt;&gt; &quot;&quot;, Related_Financial_Info__r.Invoicing_Requirements__c = &quot;&quot;, Invoicing_Notes__c = &quot;&quot;), 
&quot;Company Invoicing Notes: &quot;&amp; Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c,

IF(AND(Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c &lt;&gt; &quot;&quot;, Related_Financial_Info__r.Invoicing_Requirements__c &lt;&gt; &quot;&quot;, Invoicing_Notes__c = &quot;&quot;), 
&quot;Company Invoicing Notes: &quot;&amp; Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c &amp; BR() &amp; &quot;Family Invoicing Notes: &quot;&amp;Related_Financial_Info__r.Invoicing_Requirements__c,

IF(AND(Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c &lt;&gt; &quot;&quot;, Related_Financial_Info__r.Invoicing_Requirements__c = &quot;&quot;, Invoicing_Notes__c &lt;&gt; &quot;&quot;), 
&quot;Company Invoicing Notes: &quot;&amp; Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c &amp; BR() &amp; &quot;Student/Additional Invoicing Notes: &quot;&amp; Invoicing_Notes__c,

IF(AND(Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c = &quot;&quot;, Related_Financial_Info__r.Invoicing_Requirements__c &lt;&gt; &quot;&quot;, Invoicing_Notes__c = &quot;&quot;), 
&quot;Family Invoicing Notes: &quot;&amp;Related_Financial_Info__r.Invoicing_Requirements__c,

IF(AND(Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c = &quot;&quot;, Related_Financial_Info__r.Invoicing_Requirements__c = &quot;&quot;, Invoicing_Notes__c &lt;&gt; &quot;&quot;), 
&quot;Student/Additional Invoicing Notes: &quot;&amp; Invoicing_Notes__c,

IF(AND(Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c = &quot;&quot;, Related_Financial_Info__r.Invoicing_Requirements__c &lt;&gt; &quot;&quot;, Invoicing_Notes__c &lt;&gt; &quot;&quot;), 
&quot;Family Invoicing Notes: &quot;&amp;Related_Financial_Info__r.Invoicing_Requirements__c  &amp; BR() &amp; &quot;Student/Additional Invoicing Notes: &quot; &amp; Invoicing_Notes__c,

IF(AND(Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c &lt;&gt; &quot;&quot;, Related_Financial_Info__r.Invoicing_Requirements__c &lt;&gt; &quot;&quot;, Invoicing_Notes__c &lt;&gt; &quot;&quot;), 
&quot;Company Invoicing Notes: &quot;&amp; Related_Financial_Info__r.Related_Company_Financial_Info__r.Invoicing_Requirements__c &amp; BR() &amp; &quot;Family Invoicing Notes: &quot; &amp; Related_Financial_Info__r.Invoicing_Requirements__c  &amp; BR() &amp; &quot;Student/Additional Invoicing Notes: &quot; &amp; Invoicing_Notes__c,

&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The invoicing notes of the COMPANY, PARENT &amp; STUDENT records combined.</inlineHelpText>
        <label>Combined Invoicing Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_if_applicable_Text_Only__c</fullName>
        <description>The same as the Company_Name_if_applicable__c field but not formatted as a hyperlink</description>
        <formula>IF(
   ISBLANK(Related_Financial_Info__r.Related_Company_Financial_Info__r.Related_to__c),
   &quot;N/A&quot;,
   Related_Financial_Info__r.Related_Company_Financial_Info__r.Related_to__r.Name
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Can only be changed via the parent financial information &apos;Related Record&apos;</inlineHelpText>
        <label>Company Name (if applicable)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_if_applicable__c</fullName>
        <formula>IF(
   ISBLANK(Related_Financial_Info__r.Related_Company_Financial_Info__r.Related_to__c),
   &quot;N/A&quot;,
   HYPERLINK(&quot;/&quot;&amp;Related_Financial_Info__r.Related_Company_Financial_Info__r.Related_to__r.Id,  Related_Financial_Info__r.Related_Company_Financial_Info__r.Related_to__r.Name)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Can only be changed via the parent financial information &apos;Related Record&apos;</inlineHelpText>
        <label>Company Name (if applicable)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_pays_for__c</fullName>
        <formula>IF(
   ISBLANK(Related_Financial_Info__r.Related_Company_Financial_Info__c), 
   &quot;N/A&quot;,    
   Related_Financial_Info__r.Related_Company_Financial_Info__r.Fees_Responsible_For_Text__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set in company financial information record and ensure the same is correctly linked to the parent financial information &apos;Related Record&apos;</inlineHelpText>
        <label>Company pays for</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopyAccountId__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CopyAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Leaving_Date_Format__c</fullName>
        <formula>TEXT(DAY(  Leaving_Date__c  )) + &quot;/&quot; + 
TEXT(MONTH( Leaving_Date__c  )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Leaving_Date__c )),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Leaving Date Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Starting_Date_Format__c</fullName>
        <formula>TEXT(DAY(  Copy_Starting_Date__c  )) + &quot;/&quot; + 
TEXT(MONTH( Copy_Starting_Date__c)) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Copy_Starting_Date__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Starting Date Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Starting_Date__c</fullName>
        <formula>CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_This_Year_values_to_Next_Year_field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked via a time-based worklfow rule in order to copy from one field to another by means of a trigger. Done on the date the student starts schools.</description>
        <label>Copy This Year values to Next Year field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Current_Bus_Services__c</fullName>
        <label>Count Current Bus Services</label>
        <summaryFilterItems>
            <field>Bus_Association__c.Is_Current_Checkbox__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bus_Association__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <formula>FLOOR((TODAY()-Birth_Date__c)/365.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Signup_Form_Link__c</fullName>
        <description>The formula in this field can be changed to suit the current situation. Note that relevant contacts will need to be updated with the result before a signup email can be sent, in lieu of a trigger being created. Even once the trigger is created, student updates will need to be triggered if the formula is ever updated as they won&apos;t be reflected on contacts if the actual records aren&apos;t updated. The update required will depend on what causes the trigger to fire.</description>
        <formula>IF(School__c = &quot;The British International School of Kuala Lumpur&quot;,

&quot;https://www.tfaforms.com/4667618?tfa_8066582710648=&quot;&amp;Id&amp;
&quot;&amp;tfa_8066582710607=&quot;&amp;Student_Number_New__c&amp;
&quot;&amp;tfa_8066582710565=&quot;&amp;School_Kompanion_Student_First_Name__c&amp;&quot; &quot;&amp;Student_Surname__c&amp;
&quot;&amp;tfa_8066582710495=&quot;&amp;School_Kompanion_Gender__c&amp;
&quot;&amp;tfa_8066582710498=&quot;&amp;TEXT(Year_Group__c)&amp;
&quot;&amp;tfa_8066582710651=&quot;&amp;School_Kompanion_Gender__c&amp;
&quot;&amp;tfa_8066582710653=&quot;&amp;TEXT(Year_Group__c)&amp;
&quot;&amp;tfa_8066582710591=&quot;&amp;TEXT(Invite_Category_1__c)&amp;
&quot;&amp;tfa_8066582710597=&quot;&amp;TEXT(Invite_Category_2__c),

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Signup Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Tutor_Group__c</fullName>
        <formula>IF(
   AND(
       School__c != &quot;The British International School of Kuala Lumpur&quot;,
       School__c != &quot;The British School of Brasilia&quot;
       ),
   Student_Academic_File__r.Tutor_Group__r.Name,
   &quot;Unknown&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Tutor Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Is_US_School_User__c</fullName>
        <formula>$User.Is_US_School_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Is US School User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_FTE_Value_Details__c</fullName>
        <inlineHelpText>Provide a detailed explanation for the custom FTE value</inlineHelpText>
        <label>Custom FTE Value Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_FTE_Value__c</fullName>
        <inlineHelpText>Input an FTE value in this field to override the defaults of 1.0 for a full-day student and 0.5 for a half-day student</inlineHelpText>
        <label>Custom FTE Value</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Confirmed_Paid__c</fullName>
        <description>Used in NAE KPI reports. Differs from the Account.Deposit_Paid_Date__c field in that it&apos;s populated per student rather than per account. Populated by means of a workflow rule when a student stage is updated to &apos;Enrolled&apos; or &apos;W/List D/Paid&apos; thus signifying that an enrolment fee (or similar) has just been received OR was received in the past for the family/student so no other enrolment fee/deposit is due for this student.</description>
        <label>Date Confirmed Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Notice_Given__c</fullName>
        <formula>IF(Leaving_Notice_Date__c=NULL,0,Leaving_Date__c - Leaving_Notice_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Notice Given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_Birth__c</fullName>
        <description>Used in outbound messages to School Kompanion</description>
        <formula>DAY(Birth_Date__c)</formula>
        <label>Day of Birth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Due__c</fullName>
        <formula>IF(
   TEXT(StageName) = &quot;A/ Testing&quot;, 
   Application_Date_Formula__c + 14,
   IF(
      AND(
          TEXT(StageName) = &quot;A/ Deposit&quot;,
          NOT(ISBLANK(A_Deposit_Date__c))
          ),
      A_Deposit_Date__c + 14,
      null
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delayed_Batch_SendKompanionOutbound__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by means of immediate workflows, when checked will trigger a time-based workflow to check the Trigger_Batch_SendKompanionOutbound__c in the next cycle. Required so that outbound message sending related criteria are evaluated based on the correct student CloseDate, rather than the temporarily incorrect one that occurs briefly as a result of the auto-update of the CloseDate when a student stage is changed to &apos;Enrolled&apos;.</description>
        <label>Delayed Batch_SendKompanionOutbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>/* Records returned should equal number of queued flows */

/*AND(
    CloseDate &gt; TODAY(),
    OR(
       TEXT(StageName) = &quot;Enrolled&quot;,
       AND(
           TEXT(StageName) = &quot;A/ Deposit&quot;, 
           TEXT(Add_to_Register__c) = &quot;Yes&quot;
           )
       )
    )*/

/* Record returned indicate a failure in the process/flow */

/*AND(
    TEXT(iSAMS_System_Status__c) != &quot;1&quot;,
    CloseDate &lt;= TODAY(),
    OR(
       TEXT(StageName) = &quot;Enrolled&quot;,
       AND(
           TEXT(StageName) = &quot;A/ Deposit&quot;, 
           TEXT(Add_to_Register__c) = &quot;Yes&quot;
           )
       )
    )*/

/*AND(
    School__c != &quot;The British School of Brasilia&quot;,
    School__c != &quot;The British International School of Marbella&quot;,
    School__c != &quot;The British School of Navarra&quot;,
    OR(
       TEXT(StageName) = &quot;Enrolled&quot;,
       AND(
           TEXT(StageName) = &quot;A/ Deposit&quot;,
           TEXT(Add_to_Register__c) = &quot;Yes&quot;
           )
       ),
    CloseDate &lt; DATE(2018,09,24),
    OR(
       TEXT(Switchers_In_Classification__c) = &quot;&quot;, 
       Has_Attended_School__c = FALSE
       )
    )*/

/* BSKL  Recent Starters */

/*AND(
    School__c = &quot;The British International School of Kuala Lumpur&quot;,
    CloseDate &gt; DATE(2017,01,01),
    CloseDate &lt;= DATE(2017,01,09),
    OR(
       TEXT(StageName) = &quot;Enrolled&quot;,
       AND(
           TEXT(StageName) = &quot;A/ Deposit&quot;, 
           TEXT(Add_to_Register__c) = &quot;Yes&quot;
           )
       ),
    OR(
       TEXT(Year_Group__c) = &quot;Y3&quot;,
       TEXT(Year_Group__c) = &quot;Y4&quot;,
       TEXT(Year_Group__c) = &quot;Y5&quot;,
       TEXT(Year_Group__c) = &quot;Y6&quot;,
       TEXT(Year_Group__c) = &quot;Y7&quot;,
       TEXT(Year_Group__c) = &quot;Y8&quot;,
       TEXT(Year_Group__c) = &quot;Y9&quot;,
       TEXT(Year_Group__c) = &quot;Y10&quot;,
       TEXT(Year_Group__c) = &quot;Y11&quot;,
       TEXT(Year_Group__c) = &quot;Y12&quot;
       )
    )*/

/* Left Students */

/*OR(
   AND(
       TEXT(StageName) = &quot;Enrolled&quot;,
       Leaving_Date__c &lt; TODAY()
       ),
   AND(
       EAL__c = TRUE,
       NOT(ISBLANK(EAL_End_Date__c)),
       EAL_End_Date__c &lt; TODAY()
       )
   )*/

/* Recently Left Students */

/*AND(
    OR(
       School__c = &quot;The British International School of Kuala Lumpur&quot;,
       School__c = &quot;The British School of Brasilia&quot;
       ),
    Leaving_Date__c &lt; TODAY(),
    Leaving_Date__c &gt;= TODAY()-65
    )*/
   
/* Student Annual Rollup Filter */

AND(
    OR(
       TEXT(StageName) = &quot;Enrolled&quot;, 
       AND(
           TEXT(StageName) = &quot;A/ Deposit&quot;, 
           TEXT(Add_to_Register__c) = &quot;Yes&quot;
           )
       ), 
    CloseDate &lt; TODAY(),
    Keep_Back_Next_Year__c = TRUE,
    ISBLANK(TEXT(Test_Student_Type__c))
    )

/* Enrolled or sim students no SAF */

/*AND(
    OR(
       TEXT(StageName) = &quot;Enrolled&quot;,
       TEXT(StageName) = &quot;A/ Deposit&quot;,
       TEXT(StageName) = &quot;A/ Testing&quot;,
       TEXT(StageName) = &quot;W/List A/Deposit&quot;,
       TEXT(StageName) = &quot;W/List D/Paid&quot;
       ),
    Student_Academic_File__r.Admissions_File__r.Id != Id,
    School__c != &quot;The British Schools Foundation&quot;,
    School__c != &quot;The British School of Guangzhou&quot;,
    School__c != &quot;King&apos;s College Beijing&quot;,
    NOT(CONTAINS(Student_Number_New__c, &quot;-0&quot;))
    )*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Kompanion_Auto_Assign_Reason__c</fullName>
        <description>For recording the reason for disabling the auto-assign for a student e.g. they don&apos;t take one part of triple science which can&apos;t be handled via the auto-assign script</description>
        <label>Disable Kompanion Auto-Assign Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disable_Kompanion_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked will stop the script running in Kompanion that auto-assigns students to all of their lessons (one criteria of many others that may also disable it - see related formula field)</description>
        <label>Disable Kompanion Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAL_Classification_Prior_Value__c</fullName>
        <label>EAL Classification Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAL_Classification__c</fullName>
        <inlineHelpText>Can be used for tracking the EAL classification (financial) of a student such as their price tier or whether they&apos;re pending EAL testing before invoicing etc.</inlineHelpText>
        <label>EAL Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>School_Controlling_Picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing Tier 1</fullName>
                </value>
                <value>
                    <fullName>Pricing Tier 2</fullName>
                </value>
                <value>
                    <fullName>Test on Arrival</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAL_Current_This_Year__c</fullName>
        <description>Returns the value 1 if a student is current EAL of they are joining the EAL programme within the current fiscal/academic year</description>
        <formula>IF ( AND 

( TEXT( EAL_Start_Date__c ) &lt;&gt; &quot;&quot; , 

EAL_Start_Date__c &lt;  DATE ( IF ( MONTH ( TODAY() ) &lt; 8, YEAR ( TODAY() ) , YEAR ( TODAY () ) +1 ) ,8,1) , 

OR ( EAL_End_Date__c &gt;= TODAY() , TEXT ( EAL_End_Date__c ) = &quot;&quot; )), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAL Current/This Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAL_End_Date_Prior_Value__c</fullName>
        <label>EAL End Date Prior Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAL_End_Date__c</fullName>
        <inlineHelpText>Should be entered when a definite end date is confirmed</inlineHelpText>
        <label>EAL End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAL_Next_Year__c</fullName>
        <formula>IF ( AND 

( TEXT( EAL_Start_Date__c ) &lt;&gt; &quot;&quot; , 

EAL_Start_Date__c &lt; DATE ( IF ( MONTH ( TODAY() ) &gt;= 8, YEAR ( TODAY() ) +2 , YEAR ( TODAY () ) +1) ,8,1) , 

OR ( EAL_End_Date__c &gt;= DATE ( IF ( MONTH ( TODAY() ) &gt;= 8, YEAR ( TODAY() ) +1 , YEAR ( TODAY () ) ) ,8,1) , 

TEXT ( EAL_End_Date__c ) = &quot;&quot; )), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAL Next Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAL_Start_Date_Prior_Value__c</fullName>
        <label>EAL Start Date Prior Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAL_Start_Date__c</fullName>
        <inlineHelpText>Leave blank if no EAL</inlineHelpText>
        <label>EAL Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAL_Status_Change_to_Kompanion__c</fullName>
        <description>Result checked daily, by means of a batch job, to trigger date related updates in School Kompanion where formula evaluates to TRUE</description>
        <formula>IF(  
   AND(
       EAL_Start_Date__c &lt;= TODAY(), 
       OR(
          EAL_End_Date__c &gt;= TODAY(),
          ISBLANK(EAL_End_Date__c)
          )
       ), 
   &quot;Current&quot;,
   IF(
      AND(
          EAL_Start_Date__c &gt; TODAY(), 
          NOT(ISBLANK(EAL_Start_Date__c))
          ), 
      &quot;Future&quot;,
      IF(
         AND(
             NOT(ISBLANK(EAL_End_Date__c)),
             EAL_End_Date__c &lt; TODAY() 
             ), 
         &quot;Finished&quot;,
         &quot;No EAL&quot;
         )
      )
   ) 

!=

IF(  
   AND(
       EAL_Start_Date__c &lt;= TODAY()-1, 
       OR(
          EAL_End_Date__c &gt;= TODAY()-1,
          ISBLANK(EAL_End_Date__c)
          )
       ), 
   &quot;Current&quot;,
   IF(
      AND(
          EAL_Start_Date__c &gt; TODAY()-1, 
          NOT(ISBLANK(EAL_Start_Date__c))
          ), 
      &quot;Future&quot;,
      IF(
         AND(
             NOT(ISBLANK(EAL_End_Date__c)),
             EAL_End_Date__c &lt; TODAY()-1 
             ), 
         &quot;Finished&quot;,
         &quot;No EAL&quot;
         )
      )
   )</formula>
        <label>EAL Status Change to Kompanion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAL_Status__c</fullName>
        <formula>IF(  
   AND(
       EAL_Start_Date__c &lt;= TODAY(), 
       OR(
          EAL_End_Date__c &gt;= TODAY(),
          ISBLANK(EAL_End_Date__c)
          )
       ), 
   &quot;Current&quot; 
   &amp; IF(NOT(ISBLANK(TEXT(EAL_Classification__c))), &quot; - &quot;&amp;TEXT(EAL_Classification__c), &quot;&quot;),
   IF(
      AND(
          EAL_Start_Date__c &gt; TODAY(), 
          NOT(ISBLANK(EAL_Start_Date__c))
          ), 
      &quot;Future&quot;
      &amp; IF(NOT(ISBLANK(TEXT(EAL_Classification__c))), &quot; - &quot;&amp;TEXT(EAL_Classification__c), &quot;&quot;),
      IF(
         AND(
             NOT(ISBLANK(EAL_End_Date__c)),
             EAL_End_Date__c &lt; TODAY() 
             ), 
         &quot;Finished&quot;,
         &quot;No EAL&quot;
         )
      )
   )</formula>
        <inlineHelpText>Please set dates below to define status</inlineHelpText>
        <label>EAL Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAL_Text__c</fullName>
        <formula>if ( TEXT(EAL_Start_Date__c)  &lt;&gt; &quot;&quot;, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAL Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ben 160624: Check to see if this is still used in any reports and if not remove completely from logic as it should no longer be required.</description>
        <label>EAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edexcel_Candidate_Number__c</fullName>
        <formula>IF(
   ISNUMBER(RIGHT(Edexcel_UCI_Number__c, 1)), 
   RIGHT(Edexcel_UCI_Number__c, 4),
   MID(Edexcel_UCI_Number__c, LEN(Edexcel_UCI_Number__c)-4, 4)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edexcel Candidate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edexcel_UCI_Number__c</fullName>
        <inlineHelpText>BSKL Centre Code: 95860B</inlineHelpText>
        <label>Edexcel UCI Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Header__c</fullName>
        <formula>IF(
   School__c = &quot;The New York International School&quot;,
   &quot;World Class Education&quot;,
   &quot;Chartered by The British Schools Foundation&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Next_Fiscal_Year__c</fullName>
        <formula>IF( 
   MONTH(TODAY()) &gt;= 8, 
   DATE(YEAR(TODAY())+2,07,31), 
   DATE(YEAR(TODAY())+1,07,31) 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Next Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enquiry_ID__c</fullName>
        <description>Used during conversion to ensure that existing records are not overwritten</description>
        <label>Enquiry ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled Email Sent</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>